@@ -1,3 +1,7 @@
+2007-05-16  Douglas Bates  <bates@stat.wisc.edu>
+
+	* R/CHMfactor.R: Added solve methods for a CHMfactor object.
+
 2007-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 0.99875-1
